--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,48 @@ body {
     rgb(var(--background-start-rgb));
   font-family: "Bebas Neue", cursive;
 }
+.custom-gradient {
+  background: linear-gradient(
+    138deg,
+    rgba(163, 93, 222, 1) 0%,
+    rgba(182, 116, 237, 1) 0%,
+    rgba(182, 116, 237, 1) 0%,
+    rgba(163, 93, 222, 1) 0%
+  );
+  transition-duration: 10s;
+  transition: all;
+}
+.custom-gradient:hover {
+  background: linear-gradient(
+    138deg,
+    rgba(163, 93, 222, 1) 55%,
+    rgba(182, 116, 237, 1) 55%,
+    rgba(182, 116, 237, 1) 69%,
+    rgba(163, 93, 222, 1) 69%
+  );
+  filter: drop-shadow(0px 0px 10px rgba(182, 116, 237, 1));
+}
 
+@keyframes gradientBG {
+  0% {
+    background: linear-gradient(
+      138deg,
+      rgba(163, 93, 222, 1) 0%,
+      rgba(182, 116, 237, 1) 0%,
+      rgba(182, 116, 237, 1) 0%,
+      rgba(163, 93, 222, 1) 0%
+    );
+  }
+  50% {
+    background: linear-gradient(
+      138deg,
+      rgba(163, 93, 222, 1) 55%,
+      rgba(182, 116, 237, 1) 55%,
+      rgba(182, 116, 237, 1) 69%,
+      rgba(163, 93, 222, 1) 69%
+    );
+  }
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
