--- a/app/globals.css
+++ b/app/globals.css
@@ -84,3 +84,17 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+.fade-enter {
+  opacity: 0;
+  transition: opacity 500ms ease-in;
+}
+.fade-enter-active {
+  opacity: 1;
+}
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 500ms ease-in;
+}
