--- a/app/globals.css
+++ b/app/globals.css
@@ -99,3 +99,39 @@ body {
   opacity: 0;
   transition: opacity 500ms ease-in;
 }
+
+/* Heading Styles */
+.typograph-heading-1 {
+  @apply text-4xl sm:text-5xl md:text-6xl font-bold;
+}
+
+.typograph-heading-2 {
+  @apply text-3xl sm:text-4xl md:text-5xl font-semibold;
+}
+
+.typograph-heading-3 {
+  @apply text-xl md:text-2xl font-semibold;
+}
+
+/* Body Text Styles */
+.typograph-body-text {
+  @apply text-base sm:text-lg md:text-xl leading-relaxed;
+}
+
+.typograph-subtext {
+  @apply text-sm md:text-base leading-relaxed font-normal;
+}
+
+/* Caption Styles */
+.typograph-caption {
+  @apply text-xs sm:text-sm md:text-base italic;
+}
+
+/* Links */
+.typograph-paragraph {
+  @apply text-base sm:text-lg md:text-xl leading-relaxed mb-4;
+}
+
+.rz-container {
+  @apply px-5 md:px-8 lg:px-16 max-w-2xl;
+}
